2.4.11
- allow other mobs to use bow and arrows properly
- allow arrows to be used independently

2.4.10
- add explosion breaker enchantment and upgrade
- fix bow info not disappearing

2.4.9
- add advanced infinity

2.4.8
- fix flux bar renderer