@@ -13,7 +13,7 @@ jei_version = 15.2.0.23
 curios_version = 5.3.4+1.20.1
 
 modid = l2archery
-ll_version = 2.4.11-pre0
+ll_version = 2.4.11
 lljij = false
 rootMod = false
 
