@@ -159,7 +159,7 @@
   "l2archery.feature.flux_up": "ssoן ʎʇıןıqɐɹnp ɟo ǝɔɐןd uı ʎbɹǝuǝ ǝɯnsuoƆ",
   "l2archery.feature.infinity": "ʎʇıuıɟuI ʇɹoddns ʍoɹɹɐ sıɥ⟘",
   "l2archery.feature.infinity_adv": "ʎʇıuıɟuI pǝɔuɐʌpⱯ ʎןuo ʇɹoddns ʍoɹɹɐ sıɥ⟘",
-  "l2archery.feature.infinity_adv_bow": "ʇoɥs uǝɥʍ ǝɯnsuoɔ ʇou ןןıʍ ʎʇıuıɟuI pǝɔuɐʌpⱯ ʇɹoddns ʇɐɥʇ sʍoɹɹⱯ",
+  "l2archery.feature.infinity_adv_bow": "ʇoɥs uǝɥʍ ǝɯnsuoɔ ʇou ןןıʍ ʎʇıuıɟuI pǝɔuɐʌpⱯ ʇɹoddns ʇɐɥʇ sʍoɹɹɐ puɐ sʍoɹɹɐ pǝddı⟘",
   "l2archery.feature.no_fall": "˙spuoɔǝs %s ɹǝʇɟɐ ɹɐǝddɐsıp ןןıʍ ʇnq 'ʎʇıʌɐɹb ןǝǝɟ ʇou ןןıʍ ʍoɹɹⱯ",
   "l2archery.feature.pierce_armor": "ɹoɯɹɐ ǝɔɹǝıd ןןıʍ ǝbɐɯɐp ʍoɹɹⱯ",
   "l2archery.feature.pierce_both": "uoıʇɔǝʇoɹd ɔıbɐɯ puɐ ɹoɯɹɐ ǝɔɹǝıd ןןıʍ ǝbɐɯɐp ʍoɹɹⱯ",
