@@ -102,7 +102,7 @@
   "stat_type.l2archery.punch": "击退",
   "stat_type.l2archery.speed": "出弓速度",
   "l2archery.feature.infinity_adv": "这种箭支持高级无限",
-  "l2archery.feature.infinity_adv_bow": "支持高级无限的箭在射出时不会消耗",
+  "l2archery.feature.infinity_adv_bow": "药水箭和支持高级无限的箭在射出时不会消耗",
   "l2archery.feature.aim_flow": "让%s米内被瞄准的目标高亮显示（仅自己可见）",
   "l2archery.feature.ender_arrow": "射中实体时交换玩家和实体的位置。射中方块时传送",
   "l2archery.feature.ender_shoot": "瞄准实体射击时直接命中，未瞄准则不发射",
