@@ -5,7 +5,8 @@
   "compatibilityLevel": "JAVA_16",
   "refmap": "l2archery.refmap.json",
   "mixins": [
-	"AbstractArrowAccessor"
+	"AbstractArrowAccessor",
+	"AbstractSkeletonMixin"
   ],
   "client": [
 	"ItemInHandRendererMixin"
